--- a/Step01Servlet/src/main/webapp/Index.html
+++ b/Step01Servlet/src/main/webapp/Index.html
@@ -9,6 +9,12 @@
 		<h1>인덱스 페이지 입니다.</h1>
 		<ul>
 			<li><a href="fortune">오늘의 운세보기</a></li>
+			<li><a href="fortune.jsp">오늘의 운세보기(.jsp)</a></li>
+			<li><a href="friend/list">친구 목록 보기</a></li>
+			<li><a href="/Step01Servlet/friend/list">친구 목록 보기</a></li>
+			<li><a href="friend/list.jsp">친구 목록 보기</a></li>
+			<li><a href="member/list">회원 목록 보기</a></li>
+			<li><a href="member/list.jsp"></a>회원 목록 보기</li>
 		</ul>
 	</div>
 </body>
