--- a/Step01Servlet/src/main/webapp/Index.html
+++ b/Step01Servlet/src/main/webapp/Index.html
@@ -14,7 +14,7 @@
 			<li><a href="/Step01Servlet/friend/list">친구 목록 보기</a></li>
 			<li><a href="friend/list.jsp">친구 목록 보기</a></li>
 			<li><a href="member/list">회원 목록 보기</a></li>
-			<li><a href="member/list.jsp"></a>회원 목록 보기</li>
+			<li><a href="member/list.jsp">회원 목록 보기</a></li>
 		</ul>
 	</div>
 </body>
