--- a/Step01Servlet/src/main/webapp/Index.html
+++ b/Step01Servlet/src/main/webapp/Index.html
@@ -27,7 +27,7 @@
 			<button type="submit">전송</button>
 		</form>
 		
-		<form action = "Send.jsp" method = "post">
+		<form action = "send.jsp" method = "post">
 			<input type = "text" name = "msg" placeholder = "서버에 할 말 입력"/>
 			<button type="submit">전송</button>
 		</form>
