--- a/Step05Final/src/main/webapp/vue/Step03_class2.html
+++ b/Step05Final/src/main/webapp/vue/Step03_class2.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Step03_class.html</title>
+<title>Step03_class2.html</title>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" />
 </head>
 <body>
@@ -10,7 +10,7 @@
 	
 	<div id="app">
 		<button class="btn btn-primary btn-lg">버튼</button>
-		<button class="btn" v-bind:class="{'btn-primary':isPrimary, 'btn-lg':isLg}">Vue 버튼</button>
+		<button class="btn" v-bind:class="obj">Vue 버튼</button>
 		<br />
 		<label> 파란색 버튼 <input type="checkbox" v-model="isPrimary" /></label>
 		<label> 큰 버튼 <input type="checkbox" v-model="isLg" /></label>
@@ -26,6 +26,16 @@
 			data : {
 				isPrimary : false,
 				isLg : false
+			},
+			//model 내부에 다른 model이 들어갈 경우 내부의 모델은 종속된 모델이다.
+			//종속된 모델을 사용할 경우 computed를 이용해야 한다.
+			computed : {
+				obj() {
+					return {
+						'btn-primary' : this.isPrimary,
+						'btn-lg' : this.isLg
+					}
+				}
 			}
 		});
 	</script>
