--- a/Step05Final/src/main/webapp/vue/Step07_component5.html
+++ b/Step05Final/src/main/webapp/vue/Step07_component5.html
@@ -11,8 +11,7 @@
 	
 	<div id="app">
 		<!-- 
-			props 이름이 camel case 로 작성되어 있으면 kebab case 로 props 를 
-			전달해야 한다.
+			props 이름이 camel case 로 작성되어 있으면 kebab case로 props를 전달해야 한다.
 		-->
 		<fortune-component v-bind:fortune-today="fortune"></fortune-component>
 	</div>
